Distributor functionality and Product prices upload

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" type="text/css" href="assets/vendors/summernote/dist/summernote.css">
     <link rel="stylesheet" media="screen" href="assets/vendors/handsontable/dist/handsontable.full.css">
     <link rel="stylesheet" href="assets/vendors/bootstrap-select/dist/css/bootstrap-select.min.css">
+    <link href="assets/vendors/angular-ui-grid/ui-grid.min.css">
 
 
     <!-- Vendors Scripts -->
@@ -88,7 +89,7 @@
     <script src="assets/vendors/angular/angular.min.js"></script>
     <script src="assets/vendors/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
-
+    <script src="assets/vendors/angular-ui-grid/ui-grid.min.js"></script>
     <script src="assets/vendors/angular-summernote/dist/angular-summernote.js"></script>
     <script src="assets/common/js/version_angular/app.js"></script>
     <script src="assets/app.min.js"></script>
@@ -100,6 +101,7 @@
 
     <script src="assets/vendors/handsontable/dist/handsontable.full.js"></script>
     <script src="assets/vendors/ngHandsontable/dist/ngHandsontable.js"></script>
+    <script src="assets/vendors/js-xlsx/dist/xlsx.full.min.js"></script>
 
     <!-- Angular Version Controllers -->
     <!--<script src="pages/register.ctrl.js"></script>
@@ -212,6 +214,7 @@
                                 Products Bulk Upload
                             </a>
                         </li>
+
                         <li>
                             <a class="left-menu-link" href="#!/orders">
                                 Orders List
@@ -220,6 +223,11 @@
                         <li>
                             <a class="left-menu-link" href="#!/neworders">
                                 Distributor Orders
+                            </a>
+                        </li>
+                        <li>
+                            <a class="left-menu-link" href="#!/products-prices">
+                                Products Prices Upload
                             </a>
                         </li>
 
