Buyer and Vendor Approval functionality Vulnerbility issue fixed

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -137,13 +137,9 @@
         </div>
         <div class="left-menu-inner scroll-pane">
             <ul class="left-menu-list left-menu-list-root list-unstyled">
-
-
-
                 <li>
                     <a class="left-menu-link" href="#!/dashboard">
                         <i class="left-menu-link-icon icmn-home2">
-
                         </i>
                         <span class="menu-top-hidden">Dashboard</span>
                     </a>
@@ -154,20 +150,24 @@
                 </li>
                 <li class="left-menu-list-submenu">
                     <a class="left-menu-link" href="javascript: void(0);">
-                        <i class="left-menu-link-icon icmn-users2">
-
-                        </i>
-                        Users
+                        <i class="left-menu-link-icon icmn-users2"></i>Users
                     </a>
                     <ul class="left-menu-list list-unstyled">
-
                         <li>
                             <a class="left-menu-link" href="#!/users/list">
                                 Users List
                             </a>
                         </li>
-
-
+                        <li>
+                            <a class="left-menu-link" href="#!/buyers/list">
+                                Buyers List
+                            </a>
+                        </li>
+                        <li>
+                            <a class="left-menu-link" href="#!/vendors/list">
+                                Vendors List
+                            </a>
+                        </li>
                     </ul>
                 </li>
                 <li class="left-menu-list-separator">
